unpackaged/main/default/objects/litify_pm__Damage__c/litify_pm__Damage__c.object-meta.xml
<CustomObject>
    <label>Damage</label>
    <nameField>
        <label>Damage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Damages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>