unpackaged/main/default/objects/litify_pm__Damage__c/fields/Amount_Paid_by_Firm__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_Firm__c</fullName>
    <label>Amount Paid by Firm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>