unpackaged/main/default/objects/litify_pm__Damage__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>