unpackaged/main/default/objects/litify_pm__Damage__c/fields/Firm_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Firm_Responsibility__c</fullName>
    <formula>Amount_Paid_by_Firm__c + litify_pm__Amount_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>