unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_ext__Provider_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Provider_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Damages</relationshipLabel>
    <relationshipName>Damages</relationshipName>
    <type>Lookup</type>
</CustomField>