unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Amount_Billed__c</fullName>
    <label>Amount Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>