unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Amount_Due__c</fullName>
    <formula>litify_pm__Amount_Billed__c -   litify_pm__Amount_Paid__c  -  litify_pm__Reduction_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>