unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Invoice__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Invoice__c</fullName>
    <label>Invoice #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>