unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__lit_Provider_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Provider_Name_Text__c</fullName>
    <formula>litify_pm__Provider__r.litify_pm__Party_Name__c</formula>
    <label>Provider Name Text</label>
    <type>Text</type>
</CustomField>