unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Damages</relationshipLabel>
    <relationshipName>Damages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>