unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Provider__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only roles related to this matter may be added.</errorMessage>
        <filterItems>
            <field>$Source.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Role__c.litify_pm__Matter__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Damages</relationshipLabel>
    <relationshipName>Damages</relationshipName>
    <type>Lookup</type>
</CustomField>