unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Reduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Reduction_Amount__c</fullName>
    <label>Reduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>