unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>