unpackaged/main/default/objects/litify_pm__Damage__c/fields/litify_pm__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Bill</fullName>
            </value>
            <value>
                <fullName>Subrogation Lien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>