unpackaged/main/default/objects/litify_pm__Damage__c/fields/tso_Request__c.field-meta.xml
<CustomField>
    <fullName>tso_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>litify_pm__Request__c</referenceTo>
    <relationshipLabel>Damages</relationshipLabel>
    <relationshipName>Damages</relationshipName>
    <type>Lookup</type>
</CustomField>